--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_layout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="@dimen/main_text_size"
-        android:fontFamily="@font/ys_display_medium"
-        android:layout_marginBottom="40dp"
-        android:layout_marginStart="@dimen/main_button_margin_horizontal"
-        android:layout_marginTop="14dp" />
 
-    <LinearLayout
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/topAppBar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:layout_marginBottom="28dp" >
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/blue"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white"
+        app:titleTextAppearance="@style/ToolbarTitleText"
+        android:layout_marginBottom="24dp"
+        app:contentInsetStart="@dimen/main_button_margin_horizontal"/>
 
-        <Button
-            style="@style/MainButton"
-            android:id="@+id/btn_search"
-            android:text="@string/search"
-            app:icon="@drawable/ic_vector" />
+    <Button
+        style="@style/MainButton"
+        android:id="@+id/btn_search"
+        android:text="@string/search"
+        app:icon="@drawable/ic_vector" />
 
-        <Button
-            style="@style/MainButton"
-            android:id="@+id/btn_media_library"
-            android:layout_marginTop="@dimen/main_button_margin_top"
-            android:text="@string/media_library"
-            app:icon="@drawable/ic_media_library" />
+    <Button
+        style="@style/MainButton"
+        android:id="@+id/btn_media_library"
+        android:text="@string/media_library"
+        app:icon="@drawable/ic_media_library"
+        android:layout_marginTop="@dimen/main_button_margin_top" />
 
-        <Button
-            style="@style/MainButton"
-            android:id="@+id/btn_settings"
-            android:layout_marginTop="@dimen/main_button_margin_top"
-            android:text="@string/settings"
-            app:icon="@drawable/ic_settings" />
-    </LinearLayout>
+    <Button
+        style="@style/MainButton"
+        android:id="@+id/btn_settings"
+        android:text="@string/settings"
+        app:icon="@drawable/ic_settings"
+        android:layout_marginTop="@dimen/main_button_margin_top"
+        android:layout_marginBottom="28dp"/>
 
 </LinearLayout>
-
