--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
+    <style name="ToolbarTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">@dimen/main_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
+
     <!--activity_settings -->
     <style name="SettingsText">
         <item name="android:textSize">@dimen/setting_text_size</item>
@@ -32,6 +37,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:tint">@color/gray</item>
         <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="ToolbarSettingsTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">@dimen/settings_text_size_title</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
 </resources>
