--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    tools:theme="@style/Theme.PlaylistMaker.Search"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    android:orientation="vertical"
+    android:background="?attr/colorPrimary">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/search_toolbar"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:title="@string/search"
+        style="@style/SearchToolbar" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp" >
+
+        <EditText
+            android:id="@+id/search_edit_text"
+            android:autofillHints="search"
+            android:hint="@string/search"
+            android:inputType="text"
+            android:maxLines="1"
+            android:drawableStart="@drawable/ic_search16"
+            style="@style/SearchEditText"
+            android:imeOptions="actionDone" />
+
+        <ImageView
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="28dp"
+            android:src="@drawable/ic_clear"
+            android:visibility="gone"
+            app:tint="?attr/colorOnSurfaceVariant" />
+    </FrameLayout>
+
+</LinearLayout>
