--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,25 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-    </style>
-</resources>
+ <resources xmlns:tools="http://schemas.android.com/tools">
+     <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+         <item name="colorPrimary">@color/black</item>
+         <item name="colorOnPrimary">@color/white</item>
+         <item name="colorOnSecondary">@color/black</item>
+     </style>
+
+     <style name="Theme.PlaylistMaker.Main" parent="Base.Theme.PlaylistMaker">
+            <item name="colorPrimary">@color/black</item>
+     </style>
+
+     <style name="Theme.PlaylistMaker.Settings" parent="Base.Theme.PlaylistMaker">
+         <item name="colorPrimary">@color/black</item>
+         <item name="colorSurface">@color/white</item>
+         <item name="colorOnSurface">@color/white</item>
+         <item name="colorOutline">@color/white</item>
+     </style>
+
+     <style name="Theme.PlaylistMaker.Search" parent="Base.Theme.PlaylistMaker">
+         <item name="colorPrimary">@color/black</item>
+         <item name="colorSurface">@color/white</item>
+         <item name="colorSurfaceVariant">@color/white</item>
+         <item name="colorOnSurfaceVariant">@color/black</item>
+     </style>
+    </resources>
