--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#1A1B22</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3772E7</color>
     <color name="gray">#AEAFB4</color>
     <color name="blue_light">#9FBBF3</color>
     <color name="dark_gray">#1A1B22</color>
-    <color name="light_gray">#AEAFB4</color>
-    <color name="marble">#E6E8EB</color>
+    <color name="light_gray">#E6E8EB</color>
     <color name="switch_ripple_color">#3772E7</color>
     <color name="switch_ripple_mask_color">#FFFFFFFF</color>
 </resources>
