--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,16 @@
     <dimen name="material_padding_end">12dp</dimen>
     <dimen name="material_padding_top">21dp</dimen>
     <dimen name="material_padding_bottom">21dp</dimen>
+    <!--activity_search -->
+    <dimen name="search_text_size_title">22sp</dimen>
+    <dimen name="search_edit_text_height">36dp</dimen>
+    <dimen name="edit_text_margin_start">16dp</dimen>
+    <dimen name="edit_text_margin_end">16dp</dimen>
+    <dimen name="edit_text_text_size">16sp</dimen>
+    <dimen name="edit_text_padding_start">12dp</dimen>
+    <dimen name="edit_text_padding_end">12dp</dimen>
+    <dimen name="edit_text_padding_top">8.5dp</dimen>
+    <dimen name="edit_text_padding_bottom">8.5dp</dimen>
+    <dimen name="edit_text_drawable_padding">8dp</dimen>
 
 </resources>
