--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--activity_main -->
-    <style name="MainButton" parent="Widget.MaterialComponents.Button">
+    <style name="MainButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -20,28 +20,85 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
-    <style name="ToolbarTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+    <style name="MainToolbarTitleTextAppearance">
         <item name="android:textSize">@dimen/main_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
+    <style name="MainToolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="titleTextAppearance">@style/MainToolbarTitleTextAppearance</item>
+    </style>
+
     <!--activity_settings -->
-    <style name="SettingsText">
+    <style name="SettingsMaterialsTextAppearance">
         <item name="android:textSize">@dimen/setting_text_size</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
-    <style name="SettingsIcon">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="SettingsMaterialsText">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:tint">@color/gray</item>
-        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:paddingStart">@dimen/material_padding_start</item>
+        <item name="android:paddingEnd">@dimen/material_padding_end</item>
+        <item name="android:paddingTop">@dimen/material_padding_top</item>
+        <item name="android:paddingBottom">@dimen/material_padding_bottom</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:textAppearance">@style/SettingsMaterialsTextAppearance</item>
+        <item name="android:drawableTint">?attr/colorOutline</item>
     </style>
 
-    <style name="ToolbarSettingsTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+    <style name="SettingsToolbarTitleTextAppearance">
         <item name="android:textSize">@dimen/settings_text_size_title</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
+    <style name="SettingsToolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="titleTextAppearance">@style/SettingsToolbarTitleTextAppearance</item>
+        <item name="titleTextColor">?attr/colorSurface</item>
+        <item name="navigationIconTint">?attr/colorSurface</item>
+    </style>
+
+    <!--activity_search -->
+    <style name="SearchToolbarTitleTextAppearance">
+        <item name="android:textSize">@dimen/search_text_size_title</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
+
+    <style name="SearchToolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="titleTextAppearance">@style/SearchToolbarTitleTextAppearance</item>
+        <item name="titleTextColor">?attr/colorSurface</item>
+        <item name="navigationIconTint">?attr/colorSurface</item>
+    </style>
+
+    <style name="SearchEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/search_edit_text_height</item>
+        <item name="android:layout_marginStart">@dimen/edit_text_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/edit_text_margin_end</item>
+        <item name="android:background">@drawable/search_field_background</item>
+        <item name="android:textColorHint">?attr/colorOnSurfaceVariant</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">@dimen/edit_text_text_size</item>
+        <item name="android:drawableTint">?attr/colorOnSurfaceVariant</item>
+        <item name="android:paddingStart">@dimen/edit_text_padding_start</item>
+        <item name="android:paddingEnd">@dimen/edit_text_padding_end</item>
+        <item name="android:paddingTop">@dimen/edit_text_padding_top</item>
+        <item name="android:paddingBottom">@dimen/edit_text_padding_bottom</item>
+        <item name="android:drawablePadding">@dimen/edit_text_drawable_padding</item>
+        <item name="android:textCursorDrawable">@drawable/edittext_cursor</item>
+    </style>
 </resources>
