--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,5 +21,6 @@
          <item name="colorSurface">@color/white</item>
          <item name="colorSurfaceVariant">@color/white</item>
          <item name="colorOnSurfaceVariant">@color/black</item>
+         <item name="colorItemTrack">@color/white</item>
      </style>
     </resources>
