--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="material_padding_bottom">21dp</dimen>
     <!--activity_search -->
     <dimen name="search_text_size_title">22sp</dimen>
+    <dimen name="search_field_margin_bottom">16dp</dimen>
     <dimen name="search_edit_text_height">36dp</dimen>
     <dimen name="edit_text_margin_start">16dp</dimen>
     <dimen name="edit_text_margin_end">16dp</dimen>
@@ -25,5 +26,8 @@
     <dimen name="edit_text_padding_top">8.5dp</dimen>
     <dimen name="edit_text_padding_bottom">8.5dp</dimen>
     <dimen name="edit_text_drawable_padding">8dp</dimen>
+    <dimen name="search_text_size_trackName">16dp</dimen>
+    <dimen name="search_text_size_artist">11dp</dimen>
+    <dimen name="search_text_size_duration">11dp</dimen>
 
 </resources>
