--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,5 +21,6 @@
         <item name="colorSurface">@color/black</item>
         <item name="colorSurfaceVariant">@color/light_gray</item>
         <item name="colorOnSurfaceVariant">@color/gray</item>
+        <item name="colorItemTrack">@color/gray</item>
     </style>
 </resources>
