--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -8,6 +8,9 @@
     android:paddingStart="13dp"
     android:paddingEnd="12dp"
     android:layout_marginBottom="16dp"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     tools:theme="@style/Theme.PlaylistMaker.Search">
 
     <ImageView
