--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="light_gray">#E6E8EB</color>
     <color name="switch_ripple_color">#3772E7</color>
     <color name="switch_ripple_mask_color">#FFFFFFFF</color>
+    <color name="turquoise_blue">#76EAE0</color>
+    <color name="aquamarine">#00D6C3</color>
 </resources>
