--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -243,7 +243,7 @@
             android:layout_height="wrap_content"
             style="@style/descriptionTrackValue"
             android:layout_marginTop="17dp"
-            android:layout_marginBottom="20dp"
+            android:paddingBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/descriptionGenreValue"
             app:layout_constraintStart_toEndOf="@id/labelsBarrier"
             app:layout_constraintEnd_toStartOf="@id/rightBorderDescription"
