--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -46,6 +46,20 @@
             app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
             android:layout_marginEnd="28dp"
             android:visibility="gone"/>
+
+        <ProgressBar
+            android:id="@+id/searchProgressBar"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/blue"
+            app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="148dp"
+            android:visibility="gone" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
