--- a/app/src/main/res/layout/activity_media_library.xml
+++ b/app/src/main/res/layout/activity_media_library.xml
@@ -1,9 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    tools:theme="@style/Theme.PlaylistMaker.MediaLibrary"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.media.MediaLibraryActivity">
+    android:orientation="vertical"
+    android:background="?attr/colorPrimary">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/media_library_toolbar"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:title="@string/media_library"
+        style="@style/MediaLibraryToolbar" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:tabIndicatorColor="?attr/colorSurface"
+        app:tabIndicator="@drawable/tab_indicator"
+        app:tabIndicatorGravity="stretch"
+        app:tabMode="fixed"
+        app:tabTextColor="?attr/colorSurface"
+        app:tabSelectedTextColor="?attr/colorSurface"
+        app:tabTextAppearance="@style/MediaLibraryTabLayoutTextAppearance" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/media_library_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
