--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/blue</item>
@@ -22,5 +23,10 @@
         <item name="colorSurfaceVariant">@color/light_gray</item>
         <item name="colorOnSurfaceVariant">@color/gray</item>
         <item name="colorItemTrack">@color/gray</item>
+    </style>
+
+    <style name="Theme.PlaylistMaker.MediaLibrary" parent="Base.Theme.PlaylistMaker">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorSurface">@color/black</item>
     </style>
 </resources>
