--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:theme="@style/Theme.PlaylistMaker.Settings"
+    android:theme="@style/Theme.PlaylistMaker.Settings"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +11,6 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/settings_toolbar"
-        app:navigationIcon="@drawable/ic_arrow_back"
         app:title="@string/settings"
         style="@style/SettingsToolbar"
         android:layout_marginBottom="24dp" />
