--- a/app/src/main/res/layout/fragment_favorite_tracks.xml
+++ b/app/src/main/res/layout/fragment_favorite_tracks.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:theme="@style/Theme.PlaylistMaker.MediaLibrary"
     tools:context=".presentation.media.favorite.FavoriteTracksFragment">
 
     <ImageView
@@ -14,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="106dp"
+        android:contentDescription="@null"
         android:src="@drawable/ic_search_not_result" />
 
     <TextView
