--- a/app/src/main/res/layout/fragment_media_library.xml
+++ b/app/src/main/res/layout/fragment_media_library.xml
@@ -2,17 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:theme="@style/Theme.PlaylistMaker.MediaLibrary"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/Theme.PlaylistMaker.MediaLibrary"
     android:background="?attr/colorPrimary">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/media_library_toolbar"
-        app:navigationIcon="@drawable/ic_arrow_back"
         app:title="@string/media_library"
         style="@style/MediaLibraryToolbar" />
 
