--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:theme="@style/Theme.PlaylistMaker.MediaLibrary"
     tools:context=".presentation.media.playlist.PlaylistsFragment">
 
     <com.google.android.material.button.MaterialButton
@@ -20,6 +21,7 @@
         android:id="@+id/no_playlists_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@null"
         android:src="@drawable/ic_search_not_result"
         android:layout_marginTop="46dp"/>
 
