--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:theme="@style/Theme.PlaylistMaker.Search"
+    android:theme="@style/Theme.PlaylistMaker.Search"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +12,6 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/search_toolbar"
-        app:navigationIcon="@drawable/ic_arrow_back"
         app:title="@string/search"
         style="@style/SearchToolbar" />
 
@@ -53,7 +52,7 @@
             android:layout_height="44dp"
             android:layout_gravity="center"
             android:indeterminateTint="@color/blue"
-            app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/search_edit_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
